styles/style.css
/* ... */
/* PROJECTS & ARTICLES & ABOUT BACKGROUND */

#projects-articles-about-bg {
  background-image: url('../assets/banner-projects-about.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-attachment: fixed;
  padding: 96px 0;
}

/* PROJECTS SECTION */

#projects-section {
  & h2 {
    font-family: "JetBrains Mono", monospace;
    font-weight: bolder;
    font-size: 40px;
    text-align: center;
    margin-bottom: 52px;
  }

  & .projects-items {
    align-items: stretch;
    justify-content: center;
    gap: 24px;

    & .project-card {
      width: 280px;
      background-color: var(--dark-grey);
      border: solid 1px var(--light-grey);
      border-radius: 13px;

      & .project-img {
        width: 278px;
      }

      & .projects-content {
        padding: 12px;
        display: flex;
        flex-direction: column;
        gap: 24px;

        & h3 {
          font-family: "JetBrains Mono", monospace;
          font-weight: bolder;
          font-size: 20px;
          color: var(--secondary-color);
        }

        & p {
          font-family: "Roboto", sans-serif;
          font-weight: 500;
          color: var(--white);
        }

        & .project-technologies {
          display: flex;
          justify-content: space-between;

          & p {
            font-family: "Roboto", sans-serif;
            font-weight: 400;
            font-size: 14px;
            color: var(--white);
            background-color: var(--primary-color);
            padding: 4px 8px;
            border-radius: 8px;
          }
        }

        & .techtaste {
          justify-content: flex-start;
          gap: 14px;
        }

        & .projects-links {
          display: flex;
          flex-direction: column;
          gap: 12px;

          & a {
            display: flex;
            align-items: center;
            gap: 12px;

            & p {
              font-family: "Roboto", sans-serif;
              font-weight: 500;
              font-size: 14px;
              transition: all .2s;
            }
          }

          & a:hover p {
            color: var(--primary-color);
          }
        }
      }
    }
  }
}

/* ABOUT SECTION */

#about-section {
  margin-top: 96px;

  & h2 {
    font-family: "JetBrains Mono", monospace;
    font-weight: bolder;
    font-size: 40px;
    text-align: center;
    margin-bottom: 52px;
  }

  & .about-content {
    gap: 72px;

    & .about-text {
      flex-direction: column;
      align-items: flex-start;
      gap: 24px;

      & p {
        font-family: "Roboto", sans-serif;
        font-weight: 500;
      }

      & .about-links {
        gap: 24px;

        & a {
          gap: 12px;

          & p {
            color: var(--primary-color);
            transition: all .2s;
          }
        }

        & a:hover p {
          color: var(--secondary-color);
        }
      }
    }

    & .about-details {
      flex-direction: column;
      align-items: flex-start;
      gap: 24px;
      position: relative;

      & div {
        gap: 16px;
        z-index: 10;

        & p {
          font-family: "JetBrains Mono", monospace;
          font-weight: bold;
          font-size: 24px;
          color: var(--secondary-color);
        }
      }

      & .about-line {
        position: absolute;
        top: 27px;
        left: 12.5px;
        display: block;
        width: 1px;
        height: 300px;
        background-color: var(--light-grey);
      }

      & .about-arrow {
        position: absolute;
        bottom: -32px;
        left: -3px;
      }
    }
  }
}

/* CONTACT & FOOTER BACKGROUND */

#contact-footer-bg {
  background-image: url('../assets/banner-contact-footer.jpg');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-attachment: fixed;
  padding: 96px 0 40px;
}

/* CONTACT SECTION */

#contact-section {
  & h2 {
    font-family: "JetBrains Mono", monospace;
    font-weight: bolder;
    font-size: 40px;
    text-align: center;
    margin-bottom: 52px;
  }

  & .contact-section-content {
    gap: 72px;
    justify-content: center;

    & form {
      width: 400px;
      display: flex;
      flex-direction: column;
      gap: 16px;

      & div {
        background-color: var(--dark-grey);
        border: solid 1px var(--light-grey);
        border-radius: 12px;
        padding: 12px;
        display: flex;
        align-items: center;

        & input,
        textarea {
          background: transparent;
          border: none;
          outline: none;
          width: 100%;
          padding: 0 12px;
          font-size: 14px;
          font-family: "Roboto", sans-serif;
          font-weight: 500;
        }
      }

      & .input-email {
        padding: 15px 12px;
      }

      & .input-textarea {
        align-items: flex-start;
      }

      & .button-form {
        background-color: var(--primary-color);
        border: solid 1px var(--light-grey);
        border-radius: 12px;
        font-family: "Roboto", sans-serif;
        font-weight: 500;
        font-size: 16px;
        width: 100%;
        padding: 16px 0;
        cursor: pointer;
        transition: all .2s;
      }

      & .button-form:hover {
        background-color: var(--secondary-color);

      }
    }


    & h3 {
      font-family: "JetBrains Mono", monospace;
      font-weight: bolder;
      font-size: 20px;
      color: var(--secondary-color);
      margin-bottom: 16px;
    }

    & p {
      font-family: "Roboto", sans-serif;
      font-weight: 500;
      transition: all .2s;
    }

    & .contact-links {
      margin-top: 24px;
      flex-direction: column;
      align-items: flex-start;
      gap: 20px;

      & a {
        display: flex;
        align-items: center;
        gap: 16px;

        & img {
          width: 24px;
        }

        & p:hover {
          color: var(--secondary-color);
        }
      }
    }


  }
}
/* ... */

